# coriolis

./: .clang-format  .dir-locals.el  .env.example  .gitignore  .gitlab-ci.yml  .gitmodules  .pdm-python  .projectile  CMakeLists.txt  CNAME  COPYRIGHT.rst  Dockerfile-manylinux  INSTALL.rst  LICENSE.rst  Makefile  Makefile.LIP6  Makefile.devs  README  README.rst  SUPPORT.rst  __init__.py  archives.html  authors.html  build.py  builder.py  compat.nix  default.nix  flake.nix  libpython3.11.ld  meson.build  meson.options  pyproject.toml  setup.py  shell.nix  test-readme.py
Seabreeze/: CMakeLists.txt  README.txt
Seabreeze/cmake_modules/: CMakeLists.txt  FindSEABREEZE.cmake
Seabreeze/doc/: CMakeLists.txt  Doxyfile.in  Node.dox  Seabreeze.dox  Tree.dox  customHierarchy.html  customSummary.html  custom_tabs.css  doxyfile  footer.html  header.html
Seabreeze/src/: CMakeLists.txt  Configuration.cpp  Delay.cpp  Elmore.cpp  Node.cpp  PySeabreeze.cpp  PySeabreezeEngine.cpp  Seabreeze.cpp  Seabreeze.py  SeabreezeEngine.cpp  Tree.cpp  test.cpp
Seabreeze/test/: data1.txt  data2.txt  todo.txt
anabatic/: CMakeLists.txt  meson.build
anabatic/cmake_modules/: CMakeLists.txt  FindANABATIC.cmake
anabatic/doc/: NetBuilder.dox
anabatic/src/: AnabaticEngine.cpp  AntennaProtect.cpp  AutoContact.cpp  AutoContactHTee.cpp  AutoContactTerminal.cpp  AutoContactTurn.cpp  AutoContactVTee.cpp  AutoHorizontal.cpp  AutoSegment.cpp  AutoSegments.cpp  AutoVertical.cpp  CMakeLists.txt  ChipTools.cpp  Configuration.cpp  Constants.cpp  Dijkstra.cpp  Edge.cpp  EdgeCapacity.cpp  Edges.cpp  GCell.cpp  GlobalRoute.cpp  GraphicAnabaticEngine.cpp  LandingZone.cpp  LayerAssign.cpp  LoadGlobalRouting.cpp  Matrix.cpp  NetBuilder.cpp  NetBuilderHV.cpp  NetBuilderHybridVH.cpp  NetBuilderM2.cpp  NetBuilderVH.cpp  NetConstraints.cpp  NetOptimals.cpp  PostProcessRoutingPads.cpp  PreRouteds.cpp  PyAnabatic.cpp  PyAnabaticEngine.cpp  PyGraphicAnabaticEngine.cpp  PyStyleFlags.cpp  Session.cpp  (+1 more)
bootstrap/: CMakeLists.txt  Makefile.package  allianceInstaller.sh  build.conf  buildCaiman.py  buildCoriolis.py  ccb.py  coriolis2-for-distribution.patch  coriolis2.sh  coriolis2.spec  coriolis2.spec.in  coriolisEnv.py  cpDox.sh  crlenv.py  crontab.nightly  dockerManager.sh  mangroveEnv.py  refactor.py  refactor.sed  resetDoc.sh  runBuildCaiman.sh  runBuildMangrove.sh  socInstaller.py  sprof.py  unicorn.desktop  yosysInstaller.sh
bootstrap/builder/: AboutWidget.py  Builder.py  BuilderGui.py  CompileWidget.py  Configuration.py  ConfigureWidget.py  Highlighter.py  OptionsWidget.py  Project.py  ProjectWidgets.py  __init__.py
bootstrap/cmake_modules/: CMakeLists.txt  FindBootstrap.cmake  FindCOLOQUINTE.cmake  FindFLEX.cmake  FindGoodies.cmake  FindLEFDEF.cmake  FindLibbfd.cmake  FindLibexecinfo.cmake  FindPelican.cmake  FindPythonSitePackages.cmake  FindQt4.cmake  FindQwt.cmake  FindSphinx.cmake  GetGitRevisionDescription.cmake
bootstrap/debian/: changelog  changelog.in  control  copyright  coriolis2-dev.install  coriolis2.doc-base  coriolis2.install  coriolis2.postinst  coriolis2.postrm  rules
bootstrap/easyChams/: CMakeLists.txt  CompilationWidget.cpp  CompilationWidget.h  CompileHighlighter.cpp  CompileHighlighter.h  ConfigDialog.cpp  ConfigDialog.h  MainWindow.cpp  MainWindow.h  README  compile.sh  main.cpp
bootstrap/runPharos/: CHANGELOG  CMakeLists.txt  ConfigDialog.cpp  ConfigDialog.h  MainWindow.cpp  MainWindow.h  MyWidget.cpp  MyWidget.h  TechnoRow.cpp  TechnoRow.h  compile.sh  main.cpp
bootstrap/svn2git/: authors.txt  coriolis.rules  cvs2git-alliance.options  cvs2git-arith.options  svn2git.sh
bora/: CMakeLists.txt  meson.build
bora/python/: CMakeLists.txt  boraInit.py  initHook.py  meson.build
bora/src/: BoraEngine.cpp  BoxSet.cpp  CMakeLists.txt  ChannelRouting.cpp  DSlicingNode.cpp  GraphicBoraEngine.cpp  HSlicingNode.cpp  HVSetState.cpp  HVSlicingNode.cpp  NodeSets.cpp  ParameterRange.cpp  Pareto.cpp  PyBora.cpp  PyBoraEngine.cpp  PyDSlicingNode.cpp  PyGraphicBoraEngine.cpp  PyHSlicingNode.cpp  PyMatrixParameterRange.cpp  PyParameterRange.cpp  PyRHSlicingNode.cpp  PyRVSlicingNode.cpp  PySlicingNode.cpp  PyStepParameterRange.cpp  PyVSlicingNode.cpp  RHSlicingNode.cpp  RHVSlicingNode.cpp  RVSlicingNode.cpp  SlicingDataModel.cpp  SlicingDataWidget.cpp  SlicingNode.cpp  SlicingPlotWidget.cpp  SlicingWidget.cpp  VSlicingNode.cpp  cpps  meson.build
chamsin/: CMakeLists.txt
chamsin/etc/: CMakeLists.txt  technology.hcmos9.dtr.xml
chamsin/src/: CMakeLists.txt
coloquinte/: CMakeLists.txt
coloquinte/cmake_modules/: CMakeLists.txt  FindCOLOQUINTE.cmake  FindColoquinte.cmake
coloquinte/src/: CMakeLists.txt  MCF_opt.cxx  cell_swapping.cxx  checkers.cxx  circuit.cxx  detailed.cxx  legalizer.cxx  lookup_table.cxx  optimization_subproblems.cxx  orientation.cxx  piecewise_linear.cxx  rough_legalizers.cxx  row_opt.cxx  solvers.cxx  topologies.cxx
crlcore/: CMakeLists.txt  meson.build
crlcore/cmake_modules/: CMakeLists.txt  FindCORIOLIS.cmake  FindLATEX.cmake  FindLEFDEF.cmake  FindOPENACCESS.cmake  UseLATEX.cmake
crlcore/doc/: .latex2html-init  CMakeLists.txt  README.tex  general-index.html
crlcore/etc/: CMakeLists.txt  alliance.conf  display.conf  display.xml  environment.alliance.xml  hMetis.conf  kite.conf  mauka.conf  misc.conf  stratus1.conf  techno.conf  technology.ams035.s2r.xml  technology.cmos065.s2r.xml  (+6 more)
cumulus/: CMakeLists.txt  meson.build
documentation/: CMakeLists.txt  Contents.rst  Makefile  README_Arlet6502_cmos.rst  build.py  conf.py  general-index.html  index.rst  meson.build  pelicanconf.py  pelicanconf.py.in
equinox/: CMakeLists.txt  meson.build
etesian/: CMakeLists.txt  meson.build
flute/: CMakeLists.txt  meson.build
foehn/: CMakeLists.txt
hurricane/: CMakeLists.txt  CMakeLists.txt.orig  hurricane.pc.cmake  meson.build
ispd/: CMakeLists.txt
karakaze/: CMakeLists.txt
katabatic/: CMakeLists.txt
kite/: CMakeLists.txt
knik/: CMakeLists.txt  doxyfile
lefdef/: CMakeLists.txt  meson.build
mauka/: CMakeLists.txt
meltemi/: CMakeLists.txt  meson.build
(+18641 files in other folders)
