[project]
name = "coriolis-eda"
version = "2.5.5"
description = "Place and Route for semiconductors"
authors = ["Jean-Paul Chaput <Jean-Paul.Chaput@lip6.fr>"]
readme = "README.rst"
homepage = "https://github.com/lip6/coriolis"
repository = "https://github.com/lip6/coriolis"
packages = [
  { include = "coriolis"},
]
include = [
  "COPYRIGHT.rst",
  "LICENSE.rst",
  "README.rst",
  "SUPPORT.rst",
  "Seabreeze",
  "anabatic",
  "bootstrap",
  "bora",
  "builder.py",
  "coloquinte",
  "crlcore",
  "cumulus",
  "equinox",
  "etesian",
  "flute",
  "foehn",
  "hurricane",
  "ispd",
  "karakaze",
  "katana",
  "lefdef",
  "oroshi",
  "pdm.lock",
  "pyproject.toml",
  "solstice",
  "stratus1",
  "tramontana",
  "tutorial",
  "unicorn",
  "unittests",
]
[tool.pdm.dev-dependencies]
doc = ["pelican", "doxygen"]

[build-system]
requires = ["setuptools", "pdm-backend", "meson @ git+https://github.com/robtaylor/meson@mac-homebrew",  "ninja", "meson-python == 0.13.2"]
build-backend = "mesonpy"

[tool.cibuildwheel.linux]
skip = ["cp36-*", "cp37-*", "pp*"]
build-frontend = "build"
before-all = '''
 yum -y install epel-release
 yum repolist
 yum install -y \
 qt5-qtbase-devel qt5-qtsvg-devel \
 rapidjson-devel bison flex doxygen bzip2-devel flex-devel \
 boost-devel \
 boost-python boost-filesystem \
 boost-regex  boost-wave \
 python36-devel libxml2-devel \
 qwt-devel \
 ccache \
 eigen3-devel \
 wget
 wget http://lemon.cs.elte.hu/pub/sources/lemon-1.3.1.tar.gz; tar -xzf lemon-1.3.1.tar.gz; cd lemon-1.3.1; mkdir build; cd build; cmake ..; make install; cd ../..
'''
