[project]
name = "coriolis-eda"
dynamic = ["version"]
description = "Place and Route for semiconductors"
authors = [ { name = "Coriolis EDA Contributers" } ]
readme = "README.rst"
homepage = "https://github.com/lip6/coriolis"
repository = "https://github.com/lip6/coriolis"
requires-python = ">= 3.8.1"
packages = [
  { include = "coriolis"},
]
include = [
  "COPYRIGHT.rst",
  "LICENSE.rst",
  "README.rst",
  "SUPPORT.rst",
  "Seabreeze",
  "anabatic",
  "bootstrap",
  "bora",
  "builder.py",
  "coloquinte",
  "crlcore",
  "cumulus",
  "etesian",
  "flute",
  "foehn",
  "hurricane",
  "ispd",
  "karakaze",
  "katana",
  "lefdef",
  "oroshi",
  "pdm.lock",
  "pyproject.toml",
  "stratus1",
  "tramontana",
  "tutorial",
  "unicorn",
  "unittests",
]
dependencies = ["ninja>=1.11.1.1"]
[build-system]
requires = ["setuptools", "pdm-backend", "meson @ git+https://github.com/robtaylor/meson@homebrew-fixes",  "ninja", "meson-python == 0.13.2", "cmake", "dunamai"]
build-backend = "mesonpy"

[tool.cibuildwheel.linux]
skip = ["cp36-*", "cp37-*", "pp*"]
build-frontend = "build"
before-all = '''
 yum -y install epel-release
 yum repolist
 yum install -y \
 qt5-qtbase-devel qt5-qtsvg-devel \
 rapidjson-devel bison flex doxygen bzip2-devel flex-devel \
 boost-devel \
 boost-python boost-filesystem \
 boost-regex  boost-wave \
 python36-devel libxml2-devel \
 qwt-devel \
 ccache \
 eigen3-devel \
 wget
 wget http://lemon.cs.elte.hu/pub/sources/lemon-1.3.1.tar.gz; tar -xzf lemon-1.3.1.tar.gz; cd lemon-1.3.1; mkdir build; cd build; cmake ..; make install; cd ../..
'''

[tool.pdm.version]
source = "scm"
getter = "_build_utils.version"

[tool.pdm.dev-dependencies]
doc = [
    "pelican",
    "pelican-pdf",
    "docutils >= 0.20",
    "markupsafe >= 2.0.0"
]
dev = [
    "meson @ git+https://github.com/robtaylor/meson@homebrew-fixes",
    "ninja",
    "meson-python == 0.13.2",
    "cmake",
    "dunamai"
]

test = [
    "pytest>=7.4.2",
]


[tool.pdm]
plugins = [
    "pdm-dotenv",
]
