PROJECT(CHAMSIN)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4.0)

SET(CMAKE_MODULE_PATH "$ENV{HURRICANE_TOP}/share/cmake_modules/"
                      "$ENV{HURRICANE_TOP}/share/cmake_modules/")

FIND_PACKAGE(BISON REQUIRED)
FIND_PACKAGE(FLEX REQUIRED)
FIND_PACKAGE(HURRICANE REQUIRED)
FIND_PACKAGE(CORIOLIS REQUIRED)
FIND_PACKAGE(LibXml2 REQUIRED)

ADD_SUBDIRECTORY(src)
